# certpy

./: .pdm.toml  LICENSE  README.md  certpy.yml  pyproject.toml
certpy/: __init__.py  __main__.py  utils.py
